charges refactoring + qr print + management gui

--- a/views/_booking_management_actions.erb
+++ b/views/_booking_management_actions.erb
@@ -1,7 +1,14 @@
 
          <!--div id="booking_actions"-->
              <div class="btn btn-default">
-             	<a href="/admin/booking/contract/<%%=entity.id%>" target="_blank"><span class="fa fa-print"></span>&nbsp;<%=t.booking_management.print_contract%></a></div>
+             	<a href="/admin/booking/contract/<%%=entity.id%>" target="_blank"><span class="fa fa-print"></span>&nbsp;<%=t.booking_management.print_contract%></a>
+             </div>
+			 <% if booking_item_family.driver_license %>
+	             <div class="btn btn-default">
+	             	<a href="/admin/booking/qr-doc/<%%=entity.id%>" target="_blank"><span class="fa fa-qrcode"></span>&nbsp;<%=t.booking_management.print_qr%></a>
+	             </div>
+			 <% end %>
+
              <%% if (entity.status != 'cancelled') { %>
              <div class="btn btn-default">
                 <a href="/admin/booking/edit/pickup-return/<%%=entity.id%>"><span class="fa fa-calendar"></span>&nbsp;<%= t.booking_management.form.change_dates %></a>    
