--- a/views/report_charges.erb
+++ b/views/report_charges.erb
@@ -1,93 +1,138 @@
-<style>
-#table {
-  table-layout: fixed;
-  border: 1px solid #EEE;
-}
- #table .table-cell {
-   border-right: 1px solid #EEE;
-   width: 1.6em;
-   font-size: 0.85em;
- }
-</style>
 <div class="top-navigation-bar">
   <h2 class="entity-title">Listado de cobros</h2>
   <div class="form-button" style="float: right">
      <a id="print_link" href="/admin/booking/reports/charges-pdf" target="_blank">Imprimir</a>
   </div>  
 </div>
-<div class="admin_content_wrapper">
-  <div class="container_12">
-    <div class="grid_6">
-      <form name="report_charges_form" action="/admin/booking/reports/charges" method="get">
-        <div class="formrow">
-          <div style="display: inline-block">
-            <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10"/>
-          </div>
-          <div style="display: inline-block">
-            <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10"/>
-          </div>
-          <div style="display: inline-block">
+
+<div class="content admin_content_wrapper"  style="background-color: #f5f5f5; margin: 0">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="block">
+        <div class="block-header bg-gray-lighter">
+          <h3 class="block-title">Seleccionar fechas</h3>
+        </div>
+        <div class="block-content">
+          <form name="availability_form" action="/admin/booking/reports/charges" method="get" class="form-horizontal">
             <input type="hidden" name="from" id="from"/>
             <input type="hidden" name="to" id="to"/>
-            <input id="search" type="button" class="form-button blue-button" value="<%=t.entitymanagement.search%>"/>
-          </div>
+            <div class="form-group">
+              <label class="col-xs-12" for="example-text-input">
+                  Fecha de inicio
+              </label>
+              <div class="col-sm-9">
+                <input type="text" name="date_from" id="date_from" class="fieldcontrol date_control" maxlength="10" autocomplete="off" style="display: inline-block; width: auto"/>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-12" for="example-text-input">
+                  Fecha de fin
+              </label>
+              <div class="col-sm-9">
+                <input type="text" name="date_to" id="date_to" class="fieldcontrol date_control" maxlength="10" autocomplete="off" style="display: inline-block; width: auto"/>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-9">
+                <button id="search" class="btn btn-sm btn-primary" type="submit"><%=t.entitymanagement.search%></button>
+              </div>
+            </div>
+          </form>
         </div>
-      </form>
+      </div>
     </div>
   </div>
-  <div>
-    <% if @charges.empty? %>
-    <div class="all-border-solid-light top-margin-1line">
-         <p class="no-data-message"><%= t.entitymanagement.no_data %></p>
+  
+  <div class="block">
+    <div class="block-header bg-gray-lighter">
+      <h3 class="block-title">Detalle de cobros</h3>
     </div>
-    <% end %>    
-    <% last_month = nil %>
-    <% total = 0 %>
-    <% @charges.each do |charge| %>  
-      <% if last_month != charge.date.month %>
-      <% unless last_month.nil? %>    
-        <tr class="table-row">
-          <td class="table-cell">&nbsp;</td>
-          <td class="table-cell">&nbsp;</td>                    
-          <td class="table-cell right_text more_contrast_text"><%="%.2f" % total%></td>
-          <td class="table-cell">&nbsp;</td>
-          <td class="table-cell">&nbsp;</td>           
-        </tr>      
-        </tbody>
-      </table>
-      <% total = 0 %>
-      <% end %>     
-      <h3><%=t.months[charge.date.strftime('%B').downcase]%> <%=charge.date.year%></h3> 
-      <table id="table" class="table">
-        <thead class="table-header">
+    <div class="block-content">
+        <% if @charges.empty? %>
+          <p class="no-data-message"><%= t.entitymanagement.no_data %></p>
+        <% end %>    
+        <% last_month = nil %>
+        <% total = 0 %>
+        <% subtotals = {} %>
+        <% @charges.each do |charge| %>  
+          <% if last_month != charge.date.month %>
+            <% unless last_month.nil? %>
+                  <% subtotals.each do |payment_method_id, subtotal| %>
+                    <tr class="bg-gray-light">
+                      <td>&nbsp;</td>
+                      <td>Total <%=payment_method_id%></td>                    
+                      <td class="text-right"><%="%.2f" % subtotal%></td>
+                      <td>&nbsp;</td>
+                      <td>&nbsp;</td>   
+                      <td>&nbsp;</td>    
+                      <td></td>    
+                    </tr>  
+                  <% end %>    
+                  <tr class="success">
+                    <td>&nbsp;</td>
+                    <td><strong>TOTAL</strong></td>                    
+                    <td class="text-right"><strong><%="%.2f" % total%></strong></td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>   
+                    <td>&nbsp;</td>    
+                    <td></td>    
+                  </tr>      
+                </tbody>
+              </table>
+              <% total = 0 %>
+              <% subtotals.clear %>
+            <% end %>     
+            <h3 class="block-title"><%=t.months[charge.date.strftime('%B').downcase]%> <%=charge.date.year%></h3> 
+            <table class="table">
+              <thead>
+                <tr>
+                  <th style="width:15%">Fecha</th>
+                  <th style="width:15%">Forma de pago</th>
+                  <th class="text-right" style="width:15%">Importe</th>
+                  <th style="width:20%">Origen</th> 
+                  <th style="width:20%">Cliente</th>
+                  <th style="width:10%">NIF/CIF/VAT#</th>
+                  <th></th>    
+                </tr>
+              </thead>
+              <tbody>      
+          <% end %>  
           <tr>
-            <th class="table-cell" scope="col" style="width:1em">Fecha</th>
-            <th class="table-cell" scope="col" style="width:0.5em">Forma de pago</th>
-            <th class="table-cell" scope="col" style="width:1em">Importe</th>
-            <th class="table-cell" scope="col" style="width:1em">Origen</th> 
-            <th class="table-cell" scope="col" style="width:3em">Cliente</th>    
+            <td><%=charge.date.strftime('%Y-%m-%d %H:%M:%S')%> </td>
+            <td><%=charge.payment_method_id%></td>
+            <td class="text-right"><%="%.2f" % charge.amount%></td>
+            <td><%=charge.source_link%></td>
+            <td><%=charge.customer_name%> <%=charge.customer_surname%></td>
+            <td><%=charge.customer_document_id%></td>
+            <td></td> 
           </tr>
-        </thead>
-        <tbody>      
-      <% end %>  
-        <tr class="table-row">
-          <td class="table-cell"><%=charge.date.strftime('%Y-%m-%d %H:%M:%S')%> </td>
-          <td class="table-cell"><%=charge.payment_method_id%></td>
-          <td class="table-cell right_text"><%="%.2f" % charge.amount%></td>
-          <td class="table-cell"><%=charge.source_link%></td>
-          <td class="table-cell"><%=charge.customer_name%> <%=charge.customer_surname%></td>
-        </tr>
-    <% last_month = charge.date.month %>
-    <% total += charge.amount %>
-    <% end %>
-        <tr class="table-row">
-          <td class="table-cell">&nbsp;</td>
-          <td class="table-cell">&nbsp;</td>          
-          <td class="table-cell right_text more_contrast_text"><%="%.2f" % total%></td>
-          <td class="table-cell">&nbsp;</td>
-          <td class="table-cell">&nbsp;</td>          
-        </tr>          
-        </tbody>
-      </table>
+          <% last_month = charge.date.month %>
+          <% total += charge.amount %>
+          <% subtotals.has_key?(charge.payment_method_id) ? subtotals[charge.payment_method_id] += charge.amount : subtotals[charge.payment_method_id] = charge.amount %>
+        <% end %>
+            <% subtotals.each do |payment_method_id, subtotal| %>
+              <tr class="bg-gray-light">
+                <td>&nbsp;</td>
+                <td>Total <%=payment_method_id%></td>                    
+                <td class="text-right"><%="%.2f" % subtotal%></td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>   
+                <td>&nbsp;</td>    
+                <td></td>    
+              </tr>  
+            <% end %>           
+            <tr class="success">
+              <td>&nbsp;</td>
+              <td><strong>TOTAL</strong></td>          
+              <td class="right_text"><strong><%="%.2f" % total%></strong></td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td></td>           
+            </tr>          
+          </tbody>
+        </table>
+    </div>
   </div>
-</div>
+</div>  
